# admctrl

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  RELEASE  TODO  authd_setup.sh  config.h.in  configure  configure.ac
doc/: ASSERTIONS.txt  DEVELOPERS.txt  RESOURCE_CONTROL.txt  encrypt_nonce.c  resource_ctrl.fig
doc/CVS/: Entries  Repository
doc/html/CVS/: Repository
doc/latex/CVS/: Repository
kernel/: Makefile  Makefile.2  authdev.c  authdev.h  bytestream.h  client.key  compile.sh  conds  creds  debug.h  dummy_authd.c  dummy_client.c  kadm_ctrl.h  kadmctrl_req.c  kadmctrl_req.h  kclient.c  pub
kernel/CVS/: Entries  Repository  Root
man/: Makefile.am  Makefile.in  authd.3  authd.8  authd_setup.8  authdb_manage.8  authdev_submit.9  authdfe.8
src/: Doxyfile  Makefile.am  Makefile.in  adm_ctrl.c  adm_ctrl.h  admctrl_argtypes.h  admctrl_comm.c  admctrl_comm.h  admctrl_config.h  admctrl_errno.h  admctrl_req.c  admctrl_req.h  admctrlcl.c  admctrlcl.h  arith_parser.c  arith_parser.h  authd.c  authdb_manage.c  authdfe.c  filei.c  filei.h  iolib.c  iolib.h  mt_server.c  mt_server.h  resource_ctrl.c  resource_ctrl.h  shm.c  shm.h  shm_sync.c  shm_sync.h  stack.c  stack.h  string_buf.c  string_buf.h
tests/: Makefile.am  Makefile.in  README  authenticate.c  calc_test.c  client.c  conds  enc_nonce.c  priv  server.key  server.pem  snprintfv_test.c
